index.css
@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');


:root {
    --project-opacity: 1;
    --project-cursor: zoom-in;
    --project-pointer-events: auto;
    
    --background-color: var(--background-default-color); /* #f0f0f0 */
    --background-default-color: #d5e6ff; /* #f0f0f0 */
    --background-color-project-focus: #9fb3d1;
    --background-color-hover: #c0d4f0;
    --background-color-active: #d5e5ff;
    
    --secondary-color: #2b7192; /* #8d8d8d */ /* timeline bars */
    --timeline-font-color: #000000; /* #8d8d8d */

    --project-color: #fafafa;
    --project-color-hover: #f0f0f0;
    --project-font-color: #151515;
    --project-shadow-color: rgba(0, 0, 0, 0.1);
    --project-shadow-color-hover: rgba(0, 0, 0, 0.2);
    --project-shadow-color-active: rgba(0, 0, 0, 0.1);

    --link-color: #0000ee;
    --link-hover-color: #00aeee;
    --link-visited-color: #551a8b;
    --link-broken-color: #64646e;
}

:root.project-focused {
    --background-color: var(--background-color-project-focus);
}
:root.project-focused.background-hover {
    --background-color: var(--background-color-hover);
}
:root.project-focused.background-active.background-hover {
    --background-color: var(--background-color-active);
}

html {
    overflow-x: hidden;
}

body, html {
    margin: 0;
    padding: 0;
    font-family: 'Arial', sans-serif;

    background-color: var(--background-color);

    transition: background-color 0.3s ease;

    font-family: "Atkinson Hyperlegible Mono", sans-serif;
}

#background {
    display: none;
    /*
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: var(--background-color);
    transition: background-color 0.3s ease;
    */
}
body.project-focused {
    cursor: zoom-out;
}
body.project-focused > #background {
    background-color: var(--background-color-project-focus);
}
body.project-focused > #background.background-hover {
    background-color: var(--background-color-hover);
}
body.project-focused > #background.background-active {
    background-color: var(--background-color-active);
}


.unselectable {
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.external-link {
    font-style: italic;
    display: inline-flex;
    align-items: center;
}
.external-link::after {
    content: "";

    width: 1em;
    height: 0.9em;
    margin-right: 0.1em;
    margin-left: 0.2em;
}
.external-link.github::after {
    background: url("./icons/GitHub_Invertocat_White.svg") no-repeat center / contain;

    filter: brightness(0);
    -webkit-filter: brightness(0);
}
.external-link.linkedin::after {
    background: url("./icons/LinkedIn_icon.svg") no-repeat center / contain;
}
.external-link.roblox::after {
    background: url("./icons/Roblox_Logo.svg") no-repeat center / contain;

    filter: brightness(0);
    -webkit-filter: brightness(0);
}

a {
    color: var(--link-color);
    font-weight: bold;
}
a:hover:not([href="#"]) {
    color: var(--link-hover-color);
}
a:visited:not([href="#"]) {
    color: var(--link-visited-color);
}
a:visited:hover:not([href="#"]) {
    color: var(--link-hover-color);
}
a[href="#"] {
    color: var(--link-broken-color);
    text-decoration: underline dashed;
    font-style: italic;
    font-weight: normal;
    cursor: not-allowed;
}

#headerSection {
    text-align: justify;
    padding: 20px;
}


#filter-container {
    display: flex;
    justify-content: center;
    margin: 15px 0 30px;
}

.multiselect {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;

    justify-items: center;

    width: 100%;
}

.selectBox {
    grid-row: 1;
    position: relative;
    width: 160px;

    display: flex;
    align-items: center;
    justify-content: center;
    
    font-size: 16px;
    height: 22px;
}

.selectBox > svg {
    margin-right: 5px;
    font-weight: bold;
}

.selectBox > svg > circle {
    transition: cx 0.3s ease, fill 0.3s ease;
    fill: var(--background-color);
}

.selectBox:hover {
    cursor: pointer;
    font-size: 18px;
}

.selectBox:active {
    font-size: 16px;
}

.selectBox:hover > svg > circle:nth-child(4n + 2) {
    cx: 15;
}

.selectBox:hover > svg > circle:nth-child(4) {
    cx: 5;
}

.selectBox span {
    font-weight: bold;
}

.overSelect {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}

#filter-box {
    grid-row: 2;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 24px auto;

    align-items: center;
    justify-content: center;

    row-gap: 5px;

    width: max(40%, 300px);
    max-width: calc(100% - 20px);
    margin: 0;

    overflow: hidden;

    interpolate-size: allow-keywords;
    transition: height 0.3s ease, padding 0.3s ease;
}

#filter-box.hidden {
    height: 0;
    padding: 0;
}

#filter-box > p {
    margin: 0;
    padding: 0;
    font-size: 12px;
    margin: 1px;
    font-weight: bold;

    transition: transform 0.3s ease;
}

#filter-box > p > span {
    font-size: 10px;
}

#filters {
    width: calc(100% - 10px);
    padding: 0;

    transition: height 0.3s ease, padding 0.3s ease;
}


#filters > span {
    transition: transform 0.3s ease;
}

#filter-box.hidden > #filters > span {
    height: 0px;
    transform: translate(0, -300px);
}

#filter-box.hidden > p {
    transform: translate(0, -300px);
}


#pinned-projects {
    position: relative;
    display: grid;
    grid-template-columns: repeat(var(--real-col-count), auto);

    gap: 2px 10px;
    align-items: center;
    justify-content: center;

    width: calc(100% - 20px);
    margin: 10px;

    --project-width: 300px;
    --projects-per-row: 1;
    --real-col-count: 0;
}
/* ... */

